# space-game-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  generate-typescript.sh
.github/workflows/: container.yml  rust.yml
src/: main.rs  statics.rs
src/gameloop/: market.rs  mod.rs  ship.rs  site.rs  sites.rs
src/gameloop/site/: mod.rs  npc_instructions.rs
src/gameloop/site_round/: mod.rs  npc_instructions.rs
src/math/: effect.rs  instructions.rs  mod.rs  qualities.rs  round.rs  ship.rs
src/persist/: ensure_player_locations.rs  market.rs  mod.rs  notifications.rs  player.rs  site.rs
src/round/: effect.rs  entities.rs  facility.rs  instructions.rs  mod.rs  module.rs  site_instructions.rs  warp_player.rs
src/station/: mod.rs
src/types/: mod.rs  parse_static.rs
src/types/dynamic/: instruction.rs  mod.rs  player_assets.rs  player_general.rs  player_location.rs  ship.rs  site.rs
src/types/fixed/: facility.rs  lifeless.rs  mod.rs  modules.rs  shiplayout.rs  site.rs  solarsystem.rs
src/webserver/: mod.rs  site_entity.rs
static/: module-self.yaml  ship-layout.yaml
typescript-typings/: manual.ts
