[package]
name = "space-game-backend"
description = "Backend running the untitled space-game"
version = "0.1.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/EdJoPaTo/space-game-backend"
authors = ["EdJoPaTo <space-game-backend-rust@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
rand = "0.8"
regex = "1"
serde_json = "1"
serde_yaml = "0.8"
tide = "0.16"
ureq = "2"
url = "2"
#backtrace = "0.3"
#chrono = "0.4"
#itertools = "0.10"
#notify = "4"
#serde_with = "1"

[dependencies.async-std]
version = "1"
features = ["attributes"]

[dependencies.serde]
version = "1"
features = ["derive"]

#[dev-dependencies]
#float_eq = "0.6"
#tempfile = "3"

[dependencies.space-game-typings]
path = "../space-game-typings"
